# core2-mbed6-template

./: .gitmodules  CMakeLists.txt  README.md  TODO.md  core2-flasher  custom_targets.json  mbed_app.json
.devcontainer/: Dockerfile  devcontainer.json
lib/Foo/: CMakeLists.txt  Foo.cpp  Foo.h  mbed_lib.json
src/: main.cpp
